<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_nav_tools"
        android:title="@string/nav_tools" />

    <item
        android:id="@+id/nav_prayer"
        android:icon="@drawable/ic_nav_prayer"
        android:title="@string/nav_prayer" />

    <!-- Center tab: emphasized cyan circular item (Style/SHS.BottomNav centers it). -->
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_nav_accounts"
        android:title="@string/nav_accounts" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
