<?xml version="1.0" encoding="utf-8"?>
<!-- Notes / journal screen: search field, note list, empty state, FAB. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/notes_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:title="@string/note_title" />

    <EditText
        android:id="@+id/notes_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/shs_space_md"
        android:layout_marginEnd="@dimen/shs_space_md"
        android:autofillHints=""
        android:hint="@string/notes_search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/shs_space_md"
            android:paddingTop="@dimen/shs_space_sm"
            android:paddingEnd="@dimen/shs_space_md"
            android:paddingBottom="88dp" />

        <TextView
            android:id="@+id/notes_empty"
            style="@style/SHS.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/shs_space_lg"
            android:text="@string/note_empty"
            android:textColor="@color/shs_text_muted"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notes_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/shs_space_md"
        android:contentDescription="@string/note_new" />
</LinearLayout>
